Force html/body/post_body to 100% width; fix font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,15 @@
     padding: 0;
 }
 
+html, body {
+    width: 100%;
+}
+
 body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #000000;
     color: #c7c7c7;
+    font-size: 16px;
 }
 
 .header {
@@ -53,12 +58,13 @@ a:hover {
 
 @media (max-width: 980px) {
     body {
-        font-size: 1.1em;
+        font-size: 15px;
     }
 }
 
 .post_body {
     line-height: 1.7;
+    width: 100%;
 }
 
 .post_body p {
